--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs: 
     build:
-        runs-on: ubuntu-18
+        runs-on: ubuntu-latest
 
         steps: 
             - uses: actions/checkout@v4.1.7
