--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: First workflow
 
 on: [push, pull_request]
+  # push:
+    # branches:
+      # - main  # You can specify the branch you want to trigger the workflow on
 
 jobs: 
     build:
@@ -31,7 +34,7 @@ jobs:
               run: npm run build
 
             - name: Run tests
-              run: npm test
+              run: npm test-ci
 
             # Check
             - name: Upload test results
