--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,20 +15,14 @@ jobs:
             - name: Hello!
               run: echo "Hello! from ${{ github.workflow }} triggered by the ${{ github.event_name }} done by ${{ github.actor }}"
 
-            - uses: actions/cache@v4
-              with:
-                path: ~/.package_cache
-                key: ${{ runner.os }}-package-${{ hashFiles('**/package.json') }}
-                restore-keys: |
-                  ${{ runner.os }}-package-
-
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                node-version: 18.x  # Change this to your desired Node.js version
+                node-version: 18.x
+                cache: 'npm'
 
             - name: Install dependencies
-              run: npm install
+              run: npm ci
 
             - name: Build Angular app
               run: npm run build
