--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
               run: npm ci
 
             - name: 📦 Build Angular app
+              if: github.event_name == 'push' && github.ref == 'refs/heads/main'
               run: npm run build
 
             - name: 🧐 Run tests
