--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,18 @@ jobs:
                 name: test-results
                 path: ./coverage
 
-            - name: 🚀 Deploy to production
-              if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-              run: |
-                make deploy
+            - name: NPM build Angular
+              run: npm run build
+        
+            # if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+            - name: 🚀 Deploy to my EC2 instance
+              uses: easingthemes/ssh-deploy@v2.1.5
+              with:
+                SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+                SOURCE: "dist/gaction/browser/"
+                REMOTE_HOST: "54.176.250.151"
+                REMOTE_USER: "ubuntu"
+                TARGET: "/var/www/html/gaction/"
             # - name: Uploading to Azure storage...
             #  uses: bacongobbler/azure-blob-storage-upload@main
             #  with:
