chance ci for install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
                 name: test-results
                 path: ./coverage
 
-            - name: NPM build Angular
+            - name: 📦 Build
               if: github.ref == 'refs/heads/master'
               run: make build
         
